Bug 1213404 - Track numbers are too close to the edge when track is highlighted in music app

--- a/apps/music/css/view.css
+++ b/apps/music/css/view.css
@@ -44,14 +44,14 @@ gaia-fast-list p {
 gaia-fast-list em {
   position: absolute;
   top: 50%;
-  left: 0;
+  left: 0.9rem;
   width: 2rem;
   line-height: 0.7rem;
 }
 
 gaia-fast-list em ~ h3,
 gaia-fast-list em ~ p {
-  padding-left: 2rem;
+  padding-left: 2.9rem;
 }
 
 gaia-fast-list img {
